# image_recognition_api

./: CLAUDE.md  config.yaml  mise.toml  pyproject.toml
cvat/: Train.txt  obj.names
cvat/labels/: train.cache
cvat/obj_train_data/: 1024x768(1).txt  1280x1024(1).txt  1280x720(1).txt  1920x1080(1).txt  800x600(1).txt  main_page_1920x1080.txt  mainpage_login10_2560x1600(1).txt  mainpage_login10_2560x1600(2).txt  mainpage_login10_2560x1600(3).txt  mainpage_login10_2560x1600.txt  mainpage_login11_2560x1600(2).txt  mainpage_login11_2560x1600(3).txt  mainpage_login11_2560x1600(4).txt  mainpage_login11_2560x1600(5).txt  mainpage_login12_2560x1600(1).txt  mainpage_login12_2560x1600(4).txt  mainpage_login13_2560x1600(3).txt  mainpage_login13_2560x1600(4).txt  mainpage_login13_2560x1600.txt  mainpage_login14_2560x1600(4).txt  mainpage_login14_2560x1600(5).txt  mainpage_login15_2560x1600(1).txt  mainpage_login15_2560x1600(3).txt  mainpage_login15_2560x1600.txt  mainpage_login16_2560x1600(2).txt  mainpage_login16_2560x1600(4).txt  mainpage_login16_2560x1600(5).txt  mainpage_login16_2560x1600.txt  mainpage_login17_2560x1600.txt  mainpage_login18_2560x1600(2).txt  mainpage_login18_2560x1600(4).txt  mainpage_login19_2560x1600(1).txt  mainpage_login19_2560x1600(4).txt  mainpage_login1_2560x1600(2).txt  mainpage_login1_2560x1600.txt  mainpage_login20_2560x1600(4).txt  mainpage_login20_2560x1600(5).txt  mainpage_login20_2560x1600.txt  mainpage_login21_2560x1600(3).txt  mainpage_login21_2560x1600(4).txt  (+123 more)
cvat/unused/: Train.txt
src/: detector.py  main.py  training.py
(+157 files in other folders)
